name:                twitchapi-client
version:             0.1.0
synopsis:            Twitch.tv API client
description:         Twitch.tv API client for Helix and EventSub interfaces
homepage:            https://github.com/wuest/haskell-twitchapi-client
bug-reports:         https://github.com/wuest/haskell-twitchapi-client/issues
license:             BSD3
license-file:        LICENSE
author:              Tina Wuest
maintainer:          tina@wuest.me
copyright:           2025 Tina Wuest
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/wuest/haskell-twitchapi-client.git

library
  ghc-options:      -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction -static
  default-extensions: BangPatterns
                    , LambdaCase
                    , NumericUnderscores
                    , OverloadedStrings
                    , ScopedTypeVariables
  default-language: Haskell2010
  hs-source-dirs:   src

  exposed-modules:    Web.TwitchAPI.Helix.Client
                    , Web.TwitchAPI.EventSub.Client

  build-depends:      base            >= 4.11 && < 4.22
                    , aeson           >= 2.1  && < 2.3
                    , bytestring      >= 0.10 && < 0.13
                    , exceptions      >= 0.10 && < 0.11
                    , hoauth2         >= 1.16 && < 2.15
                    , http-client     >= 0.5  && < 0.8
                    , text            >= 1.2  && < 2.2
                    , time            >= 1.6  && < 1.15
                    , timerep         >= 2.0  && < 2.2
                    , uri-bytestring  >= 0.3  && < 0.5
                    , twitchapi       >= 0.1  && < 0.2
                    , websockets      >= 0.12 && < 0.14
                    , http-client     >= 0.7  && < 0.8
                    , http-client-tls >= 0.3  && < 0.4
                    , wuss            >= 2.0  && < 2.1
